# joint_tasks

./: Dockerfile  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 566de2412369_.py
src/: _types.py  config.py  enums.py  main.py  main_page.py  routers.py
src/announcements/: handlers.py  models.py  repo.py  schemas.py
src/announcements/api/: handlers.py
src/core/: components.py  models.py  schemas.py  utils.py
src/core/mixins/: __init__.py  mixins.py  relations.py
src/core/repo/: __init__.py  base.py  request.py
src/db/: all_models.py  helper.py
src/folders/: forms.py  handlers.py  models.py  repo.py  schemas.py
src/folders/api/: handlers.py
src/profiles/: forms.py  handlers.py  models.py  repo.py  schemas.py
src/profiles/api/: handlers.py
src/tasks/: dependencies.py  forms.py  handlers.py  models.py  repo.py  schemas.py
src/tasks/api/: handlers.py
src/users/: auth.py  forms.py  handlers.py  models.py  repo.py  schemas.py
src/users/api/: handlers.py
src/users/authentication/: fastapi_users.py  repo.py  transport.py
src/users/authentication/dependencies/: __init__.py  access_token.py  backend.py  strategy.py  user.py  user_auth_repo.py
src/users_auth/: handlers.py  models.py  schemas.py
src/users_auth/authentication/: fastapi_users.py  manager.py
src/users_auth/authentication/dependencies/: __init__.py  access_token.py  auth_user.py  backend.py  manager.py  strategy.py
