[tool.poetry]
name = "joint-tasks"
version = "0.1.0"
description = ""
authors = ["alelsandr <sanya10081999@gmail.com >"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.14"
uvicorn = "^0.35.0"
sqlalchemy = "^2.0.41"
sqlalchemy-utils = "^0.41.2"
pydantic-settings = "^2.10.1"
aiosqlite = "^0.21.0"
ruff = "^0.12.1"
python-multipart = "^0.0.20"
pydantic-extra-types = "^2.10.5"
phonenumbers = "^9.0.8"
fastui = "^0.7.0"
pydantic = "2.9.2"
email-validator = "^2.2.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}


[tool.poetry.group.tests.dependencies]
pytest = "^8.4.1"
factory-boy = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
